--- a/config/locales/uk.yml
+++ b/config/locales/uk.yml
@@ -153,6 +153,10 @@ uk:
         many: неправильна довжина (має бути %{count} знаків)
         one: неправильна довжина (має бути %{count} знак)
         other: неправильна довжина (має бути %{count} знаку)
+      record_invalid: "Помилка валідації: %{errors}"
+      restrict_dependent_destroy:
+        one: "Запис не може бути видалений, тому що існує зв’язаний %{record}"
+        many: "Запис не може бути видалений, тому що існують зв’язані %{record}"
     template:
       body: ! 'Помилки виявлено в таких полях:'
       header:
