translate other views

--- a/config/locales/uk.yml
+++ b/config/locales/uk.yml
@@ -278,7 +278,14 @@ uk:
         price: Ціна
         type_id: Тип обладнання
         location_id: Місце розташування
-        state_id: Технічний стан 
+        state_id: Технічний стан
+      state:
+        name: Назва
+      location:
+        name: Назва
+      type:
+        name: Назва
+        attributes: Атрибути
     errors:
       <<: *errors
   equipment:
@@ -291,3 +298,30 @@ uk:
       title: Редагування обладнання
     show:
       title: Детальна інформація про обладнання
+  states:
+    index:
+      title: Список доступних технічних станів
+    new:
+      title: Створення нового технічного стану
+    edit:
+      title: Редагування технічного стану
+    show:
+      title: Технічний стан
+  locations:
+    index:
+      title: Список доступних місць розташування
+    new:
+      title: Створення нового місця розташування
+    edit:
+      title: Редагування місця розташування
+    show:
+      title: Місце розташування
+  types:
+    index:
+      title: Список доступних типів обладнання
+    new:
+      title: Створення нового типу обладнання
+    edit:
+      title: Редагування типу обладнання
+    show:
+      title: Тип обладнання
