--- a/config/locales/uk.yml
+++ b/config/locales/uk.yml
@@ -328,3 +328,7 @@ uk:
       title: Редагування типу обладнання
     show:
       title: Тип обладнання
+  will_paginate:
+    previous_label: "&#8592; Назад"
+    next_label: "Вперед &#8594;"
+    page_gap: "&hellip;"
