add copy equipment button

--- a/config/locales/uk.yml
+++ b/config/locales/uk.yml
@@ -179,6 +179,7 @@ uk:
       confirm: Ви впевнені?
       back: Назад
       cancel: Відміна
+      copy: Копіювати
   number:
     currency:
       format:
